# logistiscout_back

./: README.md  openapi.yaml  pyproject.toml
app/: create_groupe.py  crud.py  database.py  init_db.py  main.py  models.py  requirements.txt  schemas.py  security.py  storage.py
app/routes/: auth.py  controles.py  evenements.py  menus.py  reservations.py  tentes.py
app/routes/v1/: auth.py  controles.py  evenements.py  menus.py  reservations.py  tentes.py
app/routes/v2/: auth_v2.py  controls_v2.py  deps.py  events_v2.py  group.py  menus_v2.py  tents_v2.py
app/tests/: test_app.py
